kind-gateway-example/01-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cloud-provider-kind
spec:
  controllerName: kind.sigs.k8s.io/gateway-controller
