kind-gateway-example/03-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: team-a-v1
  namespace: apps
spec:
  clusterIP: None
  selector:
    app: team-a
    version: v1
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: team-a-v2
  namespace: apps
spec:
  clusterIP: None
  selector:
    app: team-a
    version: v2
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: team-b
  namespace: apps
spec:
  clusterIP: None
  selector:
    app: team-b
  ports:
  - port: 8080
    targetPort: 8080
